Feature/code editor rta (#32)
* Intermediate commit before large refactporing containing updates and everything
- Gradle to latest
- library updates
- Java Updates
- Small Updates to application logic
- Added support for multiple notebooks using a tabbed pane
- Start for real app adding GemsFX PowerPane

* First step for better API's / extensibility
- Separate App/UI from Shell
- Provides extension mechanism for shell magic
- Provides initial extension for node display
- Provides initial extension for adding functionality using maven coordinates

* Cleaning things up
- Separate App/UI from Shell
- Provides extension mechanism for shell magic
- Provides initial extension for node display
- Provides initial extension for adding functionality using maven coordinates
- Cell highlighting for active / possibly outdated cells (combines input and output)
- Licenses for all the things
- Enable rendering of hyperlinks in markdown cells
- Add two standard tools Studio and Pad

* [WIP] Initial stab at RTA for code editing

* Fixes RTA layout issues

* [WIP] Bring back code completion

* [WIP] A little bit of syntax highlighting

* [WIP] Syntax highlighting asynchronous, 1.2.1-SNAPSHOT of rta

* [WIP] Syntax highlighting now as you type

* [WIP] Syntax highlighting fixing preset

* [WIP] Fix typo

* [WIP] Add automatic display mechanism for BufferedImage.

* [WIP] Add possibility to retrieve unresolved references.

* [WIP] Fix some RTA integration issues (loading, highlighting)

* [WIP] Fix error handling in case of unresolved references

* [WIP] Add xchart example

* [WIP] Reduce rehighlighting - do not highlight on key pressed or released

* Use insertText action

* [WIP] Fix completion by just inserting the needed characters

* [WIP] Do not allow table stuff in code editor

* Fix layout issue

* Fix selected cell marking

* Additional magic display code

* Use new RTA snapshot to improve caret issues

* remove 