@@ -1,10 +1,3 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3-rc-1/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
@@ -13,6 +6,7 @@ plugins {
 
 repositories {
     // Use Maven Central for resolving dependencies.
+    mavenLocal()
     mavenCentral()
 
     // JPRO artifacts
@@ -41,39 +35,25 @@ configurations {
 }
 
 dependencies {
-    javafx group: 'org.openjfx', name: 'javafx-base', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-graphics', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-fxml', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-controls', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-media', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-web', version: '21', classifier: javaFxPlatform
-    javafx group: 'org.openjfx', name: 'javafx-swing', version: '21', classifier: javaFxPlatform
-    
+    javafx group: 'org.openjfx', name: 'javafx-base', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-graphics', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-fxml', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-controls', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-media', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-web', version: versionJavafx, classifier: javaFxPlatform
+    javafx group: 'org.openjfx', name: 'javafx-swing', version: versionJavafx, classifier: javaFxPlatform
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: versionJunitPlatformLauncher
 
-    implementation "com.gluonhq:rich-text-area:1.1.1"
-    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+    implementation group: 'kr.motd.maven', name:'os-maven-plugin', version: versionOsMavenPlugin
 
-    implementation "kr.motd.maven:os-maven-plugin:1.7.1"
+    implementation group: 'jakarta.json', name:'jakarta.json-api', version: versionJakartaJsonApi
+    implementation group: 'jakarta.json.bind', name:'jakarta.json.bind-api', version: versionJakartaJsonBindApi
 
-    implementation "org.apache.maven:maven-model:3.8.6"
-    implementation "org.apache.maven:maven-settings:3.8.6"
-    implementation "org.apache.maven:maven-settings-builder:3.8.6"
-    implementation "org.apache.maven:maven-resolver-provider:3.8.6"
-    implementation "org.apache.maven.resolver:maven-resolver-api:1.8.2"
-    implementation "org.apache.maven.resolver:maven-resolver-spi:1.8.2"
-    implementation "org.apache.maven.resolver:maven-resolver-impl:1.8.2"
-    implementation "org.apache.maven.resolver:maven-resolver-connector-basic:1.8.2"
-    implementation "org.apache.maven.resolver:maven-resolver-transport-file:1.8.2"
-    implementation "org.apache.maven.resolver:maven-resolver-transport-http:1.8.2"
-
-    implementation "jakarta.json:jakarta.json-api:2.1.3"
-    implementation 'jakarta.json.bind:jakarta.json.bind-api:3.0.0'
-
-    runtimeOnly 'org.eclipse:yasson:3.0.3'
+    implementation project(":ui")
 }
 
 ext {
@@ -93,20 +73,19 @@ ext {
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(23)
     }
 }
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.jtaccuino.App'
+    mainClass = 'org.jtaccuino.app.Studio'
 }
 
 compileJava {
     options.compilerArgs.addAll([
             // lint everithing except preview (as using preview features would generate a warnig and thus break the build)
             '-Xlint:all,-preview',
-            '--enable-preview',
             '-Werror',
             '-proc:none',
             '--module-path',
